--- a/core/templates/store/store_list.html
+++ b/core/templates/store/store_list.html
@@ -291,7 +291,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container store-list-wrap">
     <div class="showcase mobile-product-rail">
         <div class="rail-tabs">
             <button type="button" class="rail-tab active" data-tab="best">الأكثر مبيعاً</button>
